# Fitness_Planet

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  entrypoint.sh  fly.toml  pyproject.toml  tasks.py
frontend/: .gitignore  index.html  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/__tests__/: Login.test.jsx
frontend/src/components/: Navbar.jsx
frontend/src/contexts/: UserContext.jsx
frontend/src/pages/: ActivityDetail.jsx  AddCourse.jsx  Home.jsx  Login.jsx  MyActivities.jsx  MyCourses.jsx  Register.jsx  TraineeStats.jsx
src/: activity.py  db.py  init_db.py  run.py  schema.sql  stats.py  users.py
src/routes/: __init__.py  activity_routes.py  stats_routes.py  users_routes.py
src/routes/api/: activity_api.py  auth_api.py  coach_api.py  stats_api.py  trainee_api.py
src/tests/integration/: test_full_flow.py
src/tests/unit/: test_activity.py
